init redis
